tests/baselines/reference/asyncMethod17.errors.txt
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod17.ts(2,13): error TS2372: Parameter 'await' cannot be referenced in its initializer.


==== tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod17.ts (1 errors) ====
    var o = {
      f(await = await) {
                ~~~~~
!!! error TS2372: Parameter 'await' cannot be referenced in its initializer.
      }
    }